--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -77,6 +77,8 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
   - Separar requisitos funcionales y no funcionales
   - Dividir y jerarquizar el modelo
   - Fijar criterios de validación
+  
+  _Cuando se va a diseñar una aplicación es lo primero que se hace, para saber exacatamente qué quiere el cliente._
 
 
 #### __DISEÑO__
@@ -88,20 +90,26 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
   - Diseño detallado
   - Diseño de datos
   - Diseño de interfaz
-
-
+  
+  _Modulos_
+  
+ 
 #### __CODIFICACIÓN__
 
 - Se escribe el código fuente de cada componente.
 - Pueden utilizarse distintos lenguajes informáticos:
   - __Lenguajes de programación__: C, C++, Java, Javascript, ...
   - __Lenguajes de otro tipo__: HTML, XML, JSON, ...
-
+  
+  _Programación. Y compilación_
+  
 
 #### __PRUEBAS__
 
 - El principal objetivo de las pruebas debe ser conseguir que el programa funcione incorrectamente y que se descubran defectos.
 - Deberemos someter al programa al máximo número de situaciones diferentes.
+
+_Se prueba metiendo datos erroneos, para ver si se bloquea o qué pasa (texto, donde deberían ir números, dejarlo en blanco...)_
 
 
 #### __MANTENIMIENTO__
@@ -113,6 +121,8 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
   - __Perfectivo__: se mejora la funcionalidad.
   - __Evolutivo__: se añade funcionalidades nuevas.
   - __Adaptativo__: se adapta a nuevos entornos.
+  
+  _El cliente la utiliza, y la empresa la mantiene_
 
 
 ###  Resultado tras cada fase (I)
