--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -91,7 +91,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
   - Diseño de datos
   - Diseño de interfaz
   
-  _Modulos_
+  _Módulos_
   
  
 #### __CODIFICACIÓN__
@@ -122,7 +122,7 @@ _Se prueba metiendo datos erroneos, para ver si se bloquea o qué pasa (texto, d
   - __Evolutivo__: se añade funcionalidades nuevas.
   - __Adaptativo__: se adapta a nuevos entornos.
   
-  _El cliente la utiliza, y la empresa la mantiene_
+  _El cliente la utiliza, y la empresa la mantiene (ej: Microsoft, Oracle...). Una vez que la empresa deja de dar mantenimiento de una aplicación (Windows XP, etc) el cliente puede elegir si seguir utilizándolo, aunque ya no habrá actualizaciones._
 
 
 ###  Resultado tras cada fase (I)
@@ -133,6 +133,9 @@ _Se prueba metiendo datos erroneos, para ver si se bloquea o qué pasa (texto, d
 - DISENO detallado: __Especificación de módulos y funciones__
 - CODIFICACIÓN: __Código fuente__
 
+_Documentación que hay que elaborar en cada fase._
+
+_Especificación de módulos y funciones: Aplicación: dar de alta, baja artículos... y base de datos: tabla de clientes, etc._
 
 ###  Resultado tras cada fase (II)
 
@@ -144,6 +147,15 @@ _Se prueba metiendo datos erroneos, para ver si se bloquea o qué pasa (texto, d
 - Documentación: __Documentación técnica y de usuario__ 
 - MANTENIMIENTO: __Informes de errores y control de cambios__
 
+_Módulos utilizables: partes de la aplicación que ya se pueden utilizar._
+
+_Sistema utilizable: aplicación ya al completo._
+
+_Pruebas de sistema: no son obligatorias, pero sí aconsejables. Si va bien con el sistema operativo que tiene el usuario, etc._
+
+_Documentación: Técnica: para otros desarrolladores. Usuario: manual de instrcciones. Para aplicaciones pequeñas, todo en uno._
+
+_Informe de errores: se modifica el código, se corrige el error, y se mantienen las distintas versiones, por lo hay que tener  un control de versiones?_
 
 ### Modelos de desarrollo de software
 
@@ -154,6 +166,10 @@ _Se prueba metiendo datos erroneos, para ver si se bloquea o qué pasa (texto, d
 - Modelos evolutivos o incrementales
   - Modelo en espiral (iterativos)
   - Metodologías ágiles (adaptativos)
+  
+ _Predictivos: ya no se utilizan mucho, cuando se utilizaban, una vez que se llegaba a fase de mantenimiento si había un error grande, había que volver a la fase de análisis._
+ 
+ _Evolutivos: admite que haya algun cambio en el proyecto a mitad de trbajo_
 
 
 ### Modelo en cascada (I)
@@ -185,6 +201,10 @@ _Se prueba metiendo datos erroneos, para ver si se bloquea o qué pasa (texto, d
 - El resultado de una fase es la entrada de la siguiente fase.
 - Existen diferentes variantes con mayor o menor cantidad de actividades.
 
+_Distingue el nivel de detalle con el que trabajamos. En la zona alta necesita menos detalle, en el código e implantación es donde más nivel de detalle necesita._
+
+_Verificación: producto hecho de forma correcta, es decir, funciona bien, y validación: el producto correcto que quiere el cliente._
+
 
 ### Prototipos (I)
 
@@ -193,6 +213,8 @@ _Se prueba metiendo datos erroneos, para ver si se bloquea o qué pasa (texto, d
   - por omisión o falta de concreción del usuario/cliente.
 
 ![Modelo de construcción de prototipos](http://jamj2000.github.io/entornosdesarrollo/1/assets/prototipos.png)
+
+_Cuando existe esta situación, es aconsejable este modelo._
 
 
 ### Prototipos (II)
@@ -211,6 +233,8 @@ _Se prueba metiendo datos erroneos, para ver si se bloquea o qué pasa (texto, d
   - __Prototipos evolutivos__ 
     - El prototipo está diseñado en el mismo lenguaje y herramientas del proyecto.
     - El prototipo se usa como base para desarrollar el proyecto.
+    
+    _Herramientas=entorno de desarrollo. Lenguaje C y ensablador, son los lenguajes más detallados, que se utiliza en programas definitivos, pero para hacer los prototipos rápidos, se utiliza por ejemplo Pythom._
 
 
 ### Modelo en espiral (I)
@@ -219,6 +243,8 @@ _Se prueba metiendo datos erroneos, para ver si se bloquea o qué pasa (texto, d
 - La actividad de ___ingeniería___ corresponde a las fases de los modelos clásicos: análisis, diseño, codificación, ...
 
 ![Modelo en espiral](http://jamj2000.github.io/entornosdesarrollo/1/assets/espiral.png)
+
+_Modelo incremental, hay de 4 fases y de 6 fases, como el del dibujo, se empieza por el centro de la espiral. Cuando se da la primera vuelta y se vuelve a hablar con el cliente, se puede añadir algo... y continuar con la espiral._
 
 
 ### Modelo en espiral (II)
@@ -238,6 +264,8 @@ _Se prueba metiendo datos erroneos, para ver si se bloquea o qué pasa (texto, d
   - Kanban
   - Scrum
   - XP (eXtreme Programming)
+  
+  _Son las que se utilizan en Aytos._
 
 
 ### Metodologías ágiles (II)
