--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -78,7 +78,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
   - Dividir y jerarquizar el modelo
   - Fijar criterios de validación
   
-  _Cuando se va a diseñar una aplicación es lo primero que se hace, para saber exacatamente qué quiere el cliente._
+  _Cuando se va a diseñar una aplicación es lo primero que se hace, para saber exactamente qué quiere el cliente._
 
 
 #### __DISEÑO__
@@ -91,7 +91,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
   - Diseño de datos
   - Diseño de interfaz
   
-  _Módulos_
+  _Partes o módulos_
   
  
 #### __CODIFICACIÓN__
@@ -101,7 +101,7 @@ recoge nuevos datos desde la entrada, se muestran los resultados, se leen/guarda
   - __Lenguajes de programación__: C, C++, Java, Javascript, ...
   - __Lenguajes de otro tipo__: HTML, XML, JSON, ...
   
-  _Programación. Y compilación_
+  _Programación (programa en lenguaje de programación). Y compilación. CSS tampoco es de progr._
   
 
 #### __PRUEBAS__
@@ -122,7 +122,7 @@ _Se prueba metiendo datos erroneos, para ver si se bloquea o qué pasa (texto, d
   - __Evolutivo__: se añade funcionalidades nuevas.
   - __Adaptativo__: se adapta a nuevos entornos.
   
-  _El cliente la utiliza, y la empresa la mantiene (ej: Microsoft, Oracle...). Una vez que la empresa deja de dar mantenimiento de una aplicación (Windows XP, etc) el cliente puede elegir si seguir utilizándolo, aunque ya no habrá actualizaciones._
+  _Importante. El cliente la utiliza, y la empresa la mantiene (ej: Microsoft, Oracle...). Una vez que la empresa deja de dar mantenimiento de una aplicación (Windows XP, etc) el cliente puede elegir si seguir utilizándolo, aunque ya no habrá actualizaciones._
 
 
 ###  Resultado tras cada fase (I)
@@ -186,6 +186,8 @@ _Informe de errores: se modifica el código, se corrige el error, y se mantienen
 - Es un modelo bastante rígido que se adapta mal al cambio continuo de especificaciones.
 - Existen diferentes variantes con mayor o menor cantidad de actividades.
 
+_Actualmente se utiliza poco_
+
 
 ### Modelo en V (I)
 
@@ -234,7 +236,7 @@ _Cuando existe esta situación, es aconsejable este modelo._
     - El prototipo está diseñado en el mismo lenguaje y herramientas del proyecto.
     - El prototipo se usa como base para desarrollar el proyecto.
     
-    _Herramientas=entorno de desarrollo. Lenguaje C y ensablador, son los lenguajes más detallados, que se utiliza en programas definitivos, pero para hacer los prototipos rápidos, se utiliza por ejemplo Pythom._
+    _Herramientas=entorno de desarrollo. Lenguaje C y ensablador, son los lenguajes más detallados, que se utiliza en programas definitivos, pero para hacer los prototipos rápidos, se utiliza por ejemplo Pythom.Mismo o distinto lenguaje de programación que la aplicación final_
 
 
 ### Modelo en espiral (I)
@@ -244,7 +246,7 @@ _Cuando existe esta situación, es aconsejable este modelo._
 
 ![Modelo en espiral](http://jamj2000.github.io/entornosdesarrollo/1/assets/espiral.png)
 
-_Modelo incremental, hay de 4 fases y de 6 fases, como el del dibujo, se empieza por el centro de la espiral. Cuando se da la primera vuelta y se vuelve a hablar con el cliente, se puede añadir algo... y continuar con la espiral._
+_Modelo incremental, hay de 4 fases y de 6 fases, como el del dibujo, se empieza por el centro de la espiral. Cuando se da la primera vuelta y se vuelve a hablar con el cliente, se puede añadir algo... y continuar con la espiral.Se habla con el cliente, se planifica, se hace el análisis de riesgos, después el análisis, el diseño,,, y se vuelve a comunicarse con el cliente, el cliente valora el producto, y con los problemas o fallos que surgan, se da otra vuelta a la espiral. Iteración (vuelta completa)._
 
 
 ### Modelo en espiral (II)
@@ -253,6 +255,8 @@ _Modelo incremental, hay de 4 fases y de 6 fases, como el del dibujo, se empieza
 - En la actividad de ___ingeniería___ se da gran importancia a la reutilización de código.
 
 ![Modelo en espiral](http://jamj2000.github.io/entornosdesarrollo/1/assets/espiral-poo.png)
+
+-Objeto: por ejemplo un personaje del juego. Clase: plantilla de todos los personajes. En una tienda, puede hacer falta un clase de artículos, proveedores... Hay que buscar las clases en bibliotecas (de Java o de la empresa) con el import extraemos e importamos la clase, si existen._
 
 
 ### Metodologías ágiles (I)
@@ -265,7 +269,7 @@ _Modelo incremental, hay de 4 fases y de 6 fases, como el del dibujo, se empieza
   - Scrum
   - XP (eXtreme Programming)
   
-  _Son las que se utilizan en Aytos._
+  _Son las que se utilizan en Aytos. Método de ingeniería o desarrollo. En cualquier momento se pueden añadir riquisitos (si se olvida algo, el cliente incluye algún requisito...). Trabajo más compartido: hay un jefe que va guiando al grupo. Kanban: pizarra (Aytos)_
 
 
 ### Metodologías ágiles (II)
@@ -277,6 +281,7 @@ _Modelo incremental, hay de 4 fases y de 6 fases, como el del dibujo, se empieza
 - __Colaboración con el cliente__ sobre negociación contractual
 - __Respuesta ante el cambio__ sobre seguir un plan
 
+_En metodologías antiguas se daba más importancia a los procesos y herramientas.Antes solo estaba la documentación, porque hasta finalizar el programa no se sabía si estaba bien
 
 #### __Kanban (I)__
 
