--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -281,7 +281,9 @@ _Modelo incremental, hay de 4 fases y de 6 fases, como el del dibujo, se empieza
 - __Colaboración con el cliente__ sobre negociación contractual
 - __Respuesta ante el cambio__ sobre seguir un plan
 
-_En metodologías antiguas se daba más importancia a los procesos y herramientas.Antes solo estaba la documentación, porque hasta finalizar el programa no se sabía si estaba bien
+_En metodologías antiguas se daba más importancia a los procesos y herramientas._
+
+_Antes solo estaba la documentación, porque hasta finalizar el programa no se sabía si estaba bien._
 
 #### __Kanban (I)__
 
@@ -292,6 +294,7 @@ _En metodologías antiguas se daba más importancia a los procesos y herramienta
 - [Lean manufacturing](https://es.wikipedia.org/wiki/Lean_manufacturing)
 - [Kanban en desarrollo software](https://dosideas.com/noticias/metodologias/184-como-usar-kanban-en-el-desarrollo-de-software)
 
+_Fabricación ajustada (Lean Manufacturing)_
 
 #### __Kanban (II)__
 
@@ -307,6 +310,8 @@ Pizarra kanban
 - Al principio de cada iteración se establecen sus __objetivos priorizados__ (__sprint backlog__).
 - Al finalizar cada iteración se obtiene una __entrega parcial utilizable por el cliente__.
 - Existen reuniones diarias para tratar la marcha del _sprint_.
+
+_Pizarra dividadida en 3 partes: Por hacer, haciendo, finalizado. Post it (o tarjeta) con trabajo, responsable, etc._
 
 
 #### __Scrum (II)__
