--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -281,7 +281,7 @@ _Modelo incremental, hay de 4 fases y de 6 fases, como el del dibujo, se empieza
 - __Colaboración con el cliente__ sobre negociación contractual
 - __Respuesta ante el cambio__ sobre seguir un plan
 
-_En metodologías antiguas se daba más importancia a los procesos y herramientas._
+_En metodologías antiguas se daba más importancia a los procesos y herramientas, ahora personas._
 
 _Antes solo estaba la documentación, porque hasta finalizar el programa no se sabía si estaba bien._
 
@@ -295,6 +295,8 @@ _Antes solo estaba la documentación, porque hasta finalizar el programa no se s
 - [Kanban en desarrollo software](https://dosideas.com/noticias/metodologias/184-como-usar-kanban-en-el-desarrollo-de-software)
 
 _Fabricación ajustada (Lean Manufacturing)_
+
+_Pizarra dividadida en 3 partes: Por hacer, haciendo, finalizado. Post it (o tarjeta) con trabajo, responsable, etc._
 
 #### __Kanban (II)__
 
@@ -311,7 +313,7 @@ Pizarra kanban
 - Al finalizar cada iteración se obtiene una __entrega parcial utilizable por el cliente__.
 - Existen reuniones diarias para tratar la marcha del _sprint_.
 
-_Pizarra dividadida en 3 partes: Por hacer, haciendo, finalizado. Post it (o tarjeta) con trabajo, responsable, etc._
+_Aytos. Iteración (o sprint) si es de 2 semanas, siempre cada 2 semanas. La parte que se haya desarrollado en esas dos semanas debe poder funcionar, para mostrar al cliente. Del conjunto de objetivos, se escogen los que hay que hacer en esas dos semanas, se desarrollan en ese tiempo, y se enseñan al cliente. Del conjunto restante de objetivos, se volverán a elegir los objetivos a realizar en las siguientes 2 semanas y así sucesivamente._
 
 
 #### __Scrum (II)__
