--- a/1.ELEMENTOS.md
+++ b/1.ELEMENTOS.md
@@ -332,6 +332,7 @@ __Valores__
 - Respeto o humildad 
 
 
+
 #### __XP (Programación extrema) (II)__
 
 __Características__
@@ -346,6 +347,16 @@ __Características__
 - Estándares de codificación
 - 40 horas semanales
 
+_Refactorizar: si funciona, pero no no está escrito bonito, se refactoriza, es decir: se pone bonito._
+
+_Uno programa y otro comprueba, acompaña... se van cambiando las parejas. Se van viendo los fallos sobre la marcha._
+
+_El cliente va viendo el desarrollo y va dando indicaciones (fitbuck????)._
+
+_Estándares y convenciones (dentro de la empresa) CamelCase..._
+
+_Esta metodología inside en el máximo de 40 horas... mente fresca..._
+
 
 
 ## Lenguajes de programación
@@ -356,6 +367,8 @@ __Características__
 - Para obtener código binario ejecutable tenemos 2 opciones:
   - __Compilar__
   - __Interpretar__
+  
+  _Código fuente a código ejecutable_
 
 
 ### Proceso de compilación/interpretación
@@ -367,6 +380,7 @@ __Características__
 - Un código fuente correctamente escrito no significa que funcione según lo deseado.
 - No se realiza un análisis semántico.
 
+_Léxico: no nos hemos equivocado en ; (ortografía). Sintáctico: gramática, orden de las llaves, etc._
 
 ### Lenguajes compilados
 
@@ -380,6 +394,8 @@ __Características__
 - Ejemplos: PHP, Javascript
 - Principal ventaja: El código fuente se interpreta directamente.
 - Principal desventaja: Ejecución menos eficiente.
+
+_Si encuentra algún error, muestra el error y se para. Intérprete, por ejemplo navegador web._
 
 
 ### JAVA (I)
@@ -398,6 +414,8 @@ __Características__
   - Buena documentación y base de usuarios 
 - Desventajas:
   - Menos eficiente que los lenguajes compilados 
+  
+  _Bibliotecas y entornos no están tan bien organizados. Para Android hay modificaciones para desarrollar para móviles (clases)._
 
 
 ### Tipos (I)
@@ -405,6 +423,8 @@ __Características__
 - Según la forma en la que operan:
   - __Declarativos__: indicamos el resultado a obtener sin especificar los pasos.
   - __Imperativos__: indicamos los pasos a seguir para obtener un resultado.
+
+_Imperativos: Java, JavaSrinp... Declarativos: SQL, Lisp... Indicas lo que quieres, ej: lista de clientes por apellidos, pero no cómo los pasos a dar para conseguirlo._
 
 
 ### Tipos (II)
@@ -414,6 +434,8 @@ __Características__
   - Funcionales: Utilizan funciones. Ej: Lisp, Haskell
   - Algebraicos: Utilizan sentencias. Ej: SQL
 - Normalmente son lenguajes interpretados.
+
+_Lógicos: ej: padres, abuelos... Algebraicos: busca clientes que vivan en Ecija (En inglés)_
 
 
 ### Tipos (III)
@@ -425,6 +447,8 @@ __Características__
 - Los lenguajes orientados a objetos son también lenguajes estructurados. 
 - Muchos de estos lenguajes son compilados.
 
+_Javasript orientado a objetos y funcional._
+
 
 ### Tipos (IV)
 
@@ -433,6 +457,8 @@ __Características__
   - Medio nivel: C
   - Alto nivel: C++, Java
 
+_Ensamblador: ya se utiliza poco. Sistemas operativos, la mayoría en C. Aplicaciones en alto nivel_
+_Ejercicios para el viernes. Copiar enunciado en libre office y convertir en pdf. No olvidar nombre en primera página._
 
 ### Evolución
 
