--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -17,6 +17,7 @@ En esta Unidad aprenderemos a:
 - Generar ejecutables a partir de código fuente.
 - Identificar las características comunes y específicas de diversos entornos de desarrollo.
 
+_Ej: Netbeans para Java. Eclipse (se verá en Aytos)._
 
 ### Conceptos
 
@@ -28,6 +29,7 @@ En esta Unidad aprenderemos a:
 - Enlazar (Link)
 - Interpretar
 
+_CF: texto del programa, en un lenguaje u otro. CO: binario no ejecutable. CB: binario ejecutable. Bibliotecas: todos los lenguajes tienen librerias: una serie de módulos que nos proporcionan (distintas funciones, distintos objetos) código para enlazarlo en nuestro programa.Parte de bibliotecas será la más dificil. La biblioteca acompaña al lenguaje, sin bibliotecas se hará poco... Compilar: traducir el código fuente (que está escrito en un LdP) y obtener código objeto (o en el caso de JAva a bytecode). Interpretar: traducir cf a cb y ejecutarlo. Enlazar: solo en leng. compilados, reunir todos los archivos en co en un solo archivo ejecutable. une también nuestro código con el de las bibliotecas._
 
 
 ## Herramientas básicas
@@ -40,6 +42,7 @@ En esta Unidad aprenderemos a:
 - Enlazador: agrupa varios archivos objeto en uno binario
 - Interprete: lee código fuente y genera código binario para su ejecución
 
+_Además de un LdP, necesitamos: un editor (Notepad ++), un compilador (cf->co), Cuando se interpreta: el cb que se interpreta no se almacena en ningun sitio ._
 
 ### Bibliotecas (o librerías) (I)
 
@@ -48,6 +51,7 @@ En esta Unidad aprenderemos a:
 - __Biblioteca estándar__ del lenguaje
 - __Bibliotecas adicionales__
 
+_Ofrecen ciertas funciones para poder utilizarlas. Vienen en código intermedio. BE estandarizadas con el lenguaje, vienen ya con el lenguaje. BA las introduce el programador, la empresa..._
 
 ### Bibliotecas (o librerías) (II)
 
@@ -63,6 +67,8 @@ En esta Unidad aprenderemos a:
   - Red
   - Bases de datos
   - Gráficos (sólo 2D)
+  
+  _B en C: Manejo: guardar en el disco duro, cambiar el nombre... Funciones matemáticas. B. en Java: tiene clases para todo, clases para crear interfaces gráficas (ventanas) no es uno de los lenguajes más potentes para interfaces gráficas, suelen ir un poco más lentos por ser de Java. Gráficos: línes, círculos... tampoco se uan mucho._ 
 
 
 ### Bibliotecas (o librerías) (III)
@@ -73,6 +79,8 @@ En esta Unidad aprenderemos a:
     - muy usadas
   - bibliotecas estática (.LIB o .a)
     - menos usadas actualmente
+    
+    _muchos archivos objeto. Bibliotecas dinámicas: .dll este tipo de biblioteca la tiene Windows. .so (para Linux. Significa: Objeto compartido). En java coge todos los .class (código intermedio u objeto) y los pasa a .jar -> sirven para Windows y Linux. Bibliotecas estáticas: .LIB en windows, .a para Linux)_
 
 
 ### Bibliotecas (o librerías) (IV)
@@ -80,6 +88,8 @@ En esta Unidad aprenderemos a:
 - Una biblioteca se compone de 2 partes:
   - Especificación (ofrece una API)
   - Implementación 
+  
+  _formato de las clases que vamos a utilizar, están hechos en CF, es la parte visible de la biblioteca (especificación de la biblioteca, ofrece un API. Un programador además de tener los archivos de implementación, necesita forzosamente la especificación
 
 __API__ = Interfaz de Programación de Aplicaciones
 
