--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -90,6 +90,7 @@ _Ofrecen ciertas funciones para poder utilizarlas. Vienen en código intermedio.
   - Implementación 
   
   _formato de las clases que vamos a utilizar, están hechos en CF, es la parte visible de la biblioteca (especificación de la biblioteca, ofrece un API. Un programador además de tener los archivos de implementación, necesita forzosamente la especificación
+_
 
 __API__ = Interfaz de Programación de Aplicaciones
 
@@ -101,7 +102,8 @@ __API__ = Interfaz de Programación de Aplicaciones
   - Biblioteca estándar
 - JDK: necesario para desarrollar programas
   - Herramientas: javac, jar, javadoc, ...
-
+  
+_Hay que isntalar dos componentes en java: JRE () y JDK (para pregramar, tiene la especificación de la biblioteca y el...) 
 
 ### Construir (Build) (I) 
 
