--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -89,7 +89,7 @@ _Ofrecen ciertas funciones para poder utilizarlas. Vienen en código intermedio.
   - Especificación (ofrece una API)
   - Implementación 
   
-  _formato de las clases que vamos a utilizar, están hechos en CF, es la parte visible de la biblioteca (especificación de la biblioteca, ofrece un API. Un programador además de tener los archivos de implementación, necesita forzosamente la especificación
+  _formato de las clases que vamos a utilizar, están hechos en CF, es la parte visible de la biblioteca (especificación de la biblioteca, ofrece una API. Para saber qué tiene disponible. Un programador además de tener los archivos de implementación (código objeto, bytecode), necesita forzosamente la especificación
 _
 
 __API__ = Interfaz de Programación de Aplicaciones
@@ -103,7 +103,7 @@ __API__ = Interfaz de Programación de Aplicaciones
 - JDK: necesario para desarrollar programas
   - Herramientas: javac, jar, javadoc, ...
   
-_Hay que isntalar dos componentes en java: JRE () y JDK (para pregramar, tiene la especificación de la biblioteca y el...) 
+_Hay que instalar dos componentes en java: JRE (solo ejecuta, si necesitaramos qu eoslo funcionara, por ejemplo para el antiguo programa padre de la renta, solo hacía falta instalar el JRE) y JDK (para programar, también hace falta, añade un compilador, un progrmaa de empaquetado (jar cvf (para empaquetar una biblioteca) cvf-e? (para empaquetar una aplicación). Ahora estamos trabajando con la versión de jdk 8. Ubuntu: cada 2 años, los años pares, en abril, sacan una actualización de larga duración. Para máquina virtual de casa, si hay problemas para instalar jdk8 le avisamos. Mejor instalar ubunto 16.04 y paquete default java.Tiene la especificación de la biblioteca y el) 
 
 ### Construir (Build) (I) 
 
