--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -103,7 +103,7 @@ __API__ = Interfaz de Programación de Aplicaciones
 - JDK: necesario para desarrollar programas
   - Herramientas: javac, jar, javadoc, ...
   
-_Hay que instalar dos componentes en java: JRE (solo ejecuta, si necesitaramos qu eoslo funcionara, por ejemplo para el antiguo programa padre de la renta, solo hacía falta instalar el JRE) y JDK (para programar, también hace falta, añade un compilador, un progrmaa de empaquetado (jar cvf (para empaquetar una biblioteca) cvf-e? (para empaquetar una aplicación). Ahora estamos trabajando con la versión de jdk 8. Ubuntu: cada 2 años, los años pares, en abril, sacan una actualización de larga duración. Para máquina virtual de casa, si hay problemas para instalar jdk8 le avisamos. Mejor instalar ubunto 16.04 y paquete default java.Tiene la especificación de la biblioteca y el) 
+_Hay que instalar dos componentes en java: JRE (solo ejecuta, si necesitaramos qu eoslo funcionara, por ejemplo para el antiguo programa padre de la renta, solo hacía falta instalar el JRE) y JDK (para programar, también hace falta, añade un compilador, un progrmaa de empaquetado (jar cvf (para empaquetar una biblioteca) cvf-e? (para empaquetar una aplicación). Ahora estamos trabajando con la versión de jdk 8. Ubuntu: cada 2 años, los años pares, en abril, sacan una actualización de larga duración. Para máquina virtual de casa, si hay problemas para instalar jdk8 le avisamos. Mejor instalar ubunto 16.04 y paquete default java.Tiene la especificación de la biblioteca) _
 
 ### Construir (Build) (I) 
 
@@ -112,6 +112,8 @@ _Hay que instalar dos componentes en java: JRE (solo ejecuta, si necesitaramos q
 - Dos opciones:
  - Herramientas de construcción
  - Servidor de construcción
+ 
+ _En su versión en vez de herramientas de construcción pone: equipo local. Hace falta dos cosas para construir: herramientas y archivos de construcción_
 
 
 ### Construir (Build) (II) 
@@ -121,6 +123,8 @@ _Hay que instalar dos componentes en java: JRE (solo ejecuta, si necesitaramos q
   - ant, maven, gradle (Java)
   - grunt, gulp (Javascript)
   - rake (ruby)
+
+_herramientas de Java: ant (fundación Apache), maven, gradle
 
 
 ### Construir (Build) (III) 
