--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -29,7 +29,13 @@ _Ej: Netbeans para Java. Eclipse (se verá en Aytos)._
 - Enlazar (Link)
 - Interpretar
 
-_CF: texto del programa, en un lenguaje u otro. CO: binario no ejecutable. CB: binario ejecutable. Bibliotecas: todos los lenguajes tienen librerias: una serie de módulos que nos proporcionan (distintas funciones, distintos objetos) código para enlazarlo en nuestro programa.Parte de bibliotecas será la más dificil. La biblioteca acompaña al lenguaje, sin bibliotecas se hará poco... Compilar: traducir el código fuente (que está escrito en un LdP) y obtener código objeto (o en el caso de JAva a bytecode). Interpretar: traducir cf a cb y ejecutarlo. Enlazar: solo en leng. compilados, reunir todos los archivos en co en un solo archivo ejecutable. une también nuestro código con el de las bibliotecas._
+_Código Fuente: texto del programa, en un lenguaje u otro._ 
+_Código Objeto: binario no ejecutable._ 
+_Código Binario: binario ejecutable._ 
+_Bibliotecas: todos los lenguajes tienen librerias: una serie de módulos que nos proporcionan (distintas funciones, distintos objetos) código para enlazarlo en nuestro programa.Parte de bibliotecas será la más dificil. La biblioteca acompaña al lenguaje, sin bibliotecas se hará poco..._ 
+_Compilar: traducir el código fuente (que está escrito en un lenguaje de programación) y obtener código objeto (o en el caso de Java a bytecode)._ 
+_Enlazar: solo en lenguajes compilados, reunir todos los archivos en código objeto en un solo archivo ejecutable. Une también nuestro código con el de las bibliotecas._
+_Interpretar: traducir código fuente a código binario y ejecutarlo._
 
 
 ## Herramientas básicas
@@ -42,7 +48,7 @@ _CF: texto del programa, en un lenguaje u otro. CO: binario no ejecutable. CB: b
 - Enlazador: agrupa varios archivos objeto en uno binario
 - Interprete: lee código fuente y genera código binario para su ejecución
 
-_Además de un LdP, necesitamos: un editor (Notepad ++), un compilador (cf->co), Cuando se interpreta: el cb que se interpreta no se almacena en ningun sitio ._
+_Además de un lenguaje de programación, necesitamos: un editor (Notepad ++), un compilador (cf->co). Cuando se interpreta: el código binario que se interpreta no se almacena en ningun sitio._
 
 ### Bibliotecas (o librerías) (I)
 
@@ -68,7 +74,7 @@ _Ofrecen ciertas funciones para poder utilizarlas. Vienen en código intermedio.
   - Bases de datos
   - Gráficos (sólo 2D)
   
-  _B en C: Manejo: guardar en el disco duro, cambiar el nombre... Funciones matemáticas. B. en Java: tiene clases para todo, clases para crear interfaces gráficas (ventanas) no es uno de los lenguajes más potentes para interfaces gráficas, suelen ir un poco más lentos por ser de Java. Gráficos: línes, círculos... tampoco se uan mucho._ 
+  _Bibliotecas en C: Manejo: guardar en el disco duro, cambiar el nombre... Funciones matemáticas. B. en Java: tiene clases para todo, clases para crear interfaces gráficas (ventanas) no es uno de los lenguajes más potentes para interfaces gráficas, suelen ir un poco más lentos por ser de Java. Gráficos: línes, círculos... tampoco se uan mucho._ 
 
 
 ### Bibliotecas (o librerías) (III)
@@ -124,7 +130,9 @@ _Hay que instalar dos componentes en java: JRE (solo ejecuta, si necesitaramos q
   - grunt, gulp (Javascript)
   - rake (ruby)
 
-_herramientas de Java: ant (fundación Apache), maven, gradle
+_IMPORTANTE PARA EXAMEN (el examen tendrá una parte tipo test y otra parte práctica(compilar java, empaquetar en java, hacer alguna biblioteca... enfocado a Java):
+
+herramientas de Java: ant (fundación Apache), maven, gradle
 
 
 ### Construir (Build) (III) 
