--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -132,7 +132,7 @@ _Hay que instalar dos componentes en java: JRE (solo ejecuta, si necesitaramos q
 
 _IMPORTANTE PARA EXAMEN (el examen tendrá una parte tipo test y otra parte práctica(compilar java, empaquetar en java, hacer alguna biblioteca... enfocado a Java):
 
-herramientas de Java: ant (fundación Apache), maven, gradle
+Herramientas de Java: ant (fundación Apache. En Netbeans utiliza ant (por debajo) lee el build.xml y compila y enlaza la aplicación), maven (utilizada por Eclipse (también se puede usar en NB...) , gradle (se usa con Android estudio, pero puede usarse también en Neatbeans y en Eclipse, pero hay que instalarla a parte._
 
 
 ### Construir (Build) (III) 
@@ -147,13 +147,15 @@ herramientas de Java: ant (fundación Apache), maven, gradle
   - gulp: __gulpfile.js__
   - rake: __Rakefile__
 
+_también entra en el examen_
 
 ### Construir (Build) (IV) 
 
 - Generadores de archivos de construcción
   - CMake: CMakeLists.txt
   - Meson: meson.build  
-
+  
+_cm un archivo para cada plataforma¿?_
 
 ### Construir (Build) (V) 
 
@@ -164,6 +166,7 @@ herramientas de Java: ant (fundación Apache), maven, gradle
   - Bamboo
   - TeamCity
 
+_Jenkins se utiliza bastante en Java. Bamboo es el que usan en Aytos. Travis Githug. Circle del estilo de Travis_
 
 
 ## Entornos integrados de desarrollo (IDE)
