--- a/2.ENTORNOS.md
+++ b/2.ENTORNOS.md
@@ -95,8 +95,8 @@ _Ofrecen ciertas funciones para poder utilizarlas. Vienen en código intermedio.
   - Especificación (ofrece una API)
   - Implementación 
   
-  _formato de las clases que vamos a utilizar, están hechos en CF, es la parte visible de la biblioteca (especificación de la biblioteca, ofrece una API. Para saber qué tiene disponible. Un programador además de tener los archivos de implementación (código objeto, bytecode), necesita forzosamente la especificación
-_
+  _formato de las clases que vamos a utilizar, están hechos en CF, es la parte visible de la biblioteca (especificación de la biblioteca, ofrece una API. Para saber qué tiene disponible. Un programador además de tener los archivos de implementación (código objeto, bytecode), necesita forzosamente la especificación_
+
 
 __API__ = Interfaz de Programación de Aplicaciones
 
@@ -130,9 +130,9 @@ _Hay que instalar dos componentes en java: JRE (solo ejecuta, si necesitaramos q
   - grunt, gulp (Javascript)
   - rake (ruby)
 
-_IMPORTANTE PARA EXAMEN (el examen tendrá una parte tipo test y otra parte práctica(compilar java, empaquetar en java, hacer alguna biblioteca... enfocado a Java):
+_IMPORTANTE PARA EXAMEN (el examen tendrá una parte tipo test y otra parte práctica(compilar java, empaquetar en java, hacer alguna biblioteca... enfocado a Java):_
 
-Herramientas de Java: ant (fundación Apache. En Netbeans utiliza ant (por debajo) lee el build.xml y compila y enlaza la aplicación), maven (utilizada por Eclipse (también se puede usar en NB...) , gradle (se usa con Android estudio, pero puede usarse también en Neatbeans y en Eclipse, pero hay que instalarla a parte._
+_Herramientas de Java: ant (fundación Apache. En Netbeans utiliza ant (por debajo) lee el build.xml y compila y enlaza la aplicación), maven (utilizada por Eclipse (también se puede usar en NB...) , gradle (se usa con Android estudio, pero puede usarse también en Neatbeans y en Eclipse, pero hay que instalarla a parte._
 
 
 ### Construir (Build) (III) 
