--- a/3.PRUEBAS.md
+++ b/3.PRUEBAS.md
@@ -29,6 +29,8 @@ En esta Unidad aprenderemos a:
 - Efectuar pruebas de integración, de sistema y de aceptación.
 - Realizar medidas de calidad sobre el software desarrollado.
 
+_índice: introducción, pruebas, Pruebas unitarias: pruebas de la unidad. Pruebas de integración: varias clases que por si solas funcionan bien,y al integrar todas hay errores. Pruebas de sistema: una vez implantado en el S.O. rendimiento, tolerancia a fallos... Prueba de aceptación: el cliente debe dar el visto bueno. Medidas de calidad: que cumpla los requisitos del cliente, que sea eficiente, interfaz amigable, facilidad de uso y facilidad de mantenimiento (diseño ordenado, que falicite los cambios que haya que hacer...), tolerancia a fallos, multiplataforma_
+_pwa aplicaciones progresivas_
 
 ### Objetivos de las pruebas
 
@@ -39,6 +41,7 @@ En esta Unidad aprenderemos a:
 
 - Existen distintos **frameworks** para la realización de pruebas.
 
+_Es bueno que las pruebas no las haga el mismo programador, ya que conoce el código... Objetivos: hace lo que te pide el cliente, y no haga errores porque hace cosas que no debe hacer_
 
 ### Framework
 
@@ -50,6 +53,7 @@ En esta Unidad aprenderemos a:
 
 - Permite unificar el proceso de desarrollo entre desarrolladores.
 
+_Framework: bibliotecas especiales, más avanzada, con ciertas herramientas... Es un marco de trabajo, te obliga a programar de una forma determinada (flujo de trabajo más definido) = Te marca cierta rutina de trabajo. [Los programadores en cierto modo son intercambiables]_
 
 
 ## Pruebas
@@ -63,6 +67,7 @@ Requieren la ejecución de la aplicación. Permiten medir el comportamiento de l
 - __Pruebas estáticas:__
 Se realizan sin ejecutar el código de la aplicación. Se examina el código fuente.
 
+_PD: probamos la aplicación ejecutándola, medimos el comportamiento de la aplicación. PE: Se examina el código sin ejecutar la aplicación. Analizadores de código (por ejemplo te dice que una variable no se está usando, o código inalcanzable)_
 
 ### Estrategias de prueba
 
@@ -72,6 +77,7 @@ Se estudia el sistema desde fuera. Son pruebas funcionales.
 - __Caja blanca:__
 Se examina el código fuente y su ejecución. Son pruebas estructurales.
 
+_Forma en la que se aborda la prueba. Caja blanca también se llama caja transparente, si hay sentencias que no se ejecutan, si todos los casos de prueba son válidos..._
 
 ### Estrategias de prueba
 
@@ -88,6 +94,7 @@ Se examina el código fuente y su ejecución. Son pruebas estructurales.
   - Particiones de equivalencia
   - Valores límite
 
+_Se trabaja sobre la interfaz (no gráfica) el cascarón, la parte externa. Se ponen unos valores de entrada y se ve si los valoores de salida son los correctos. si quisieramos analizar una aplicaicón que lo que hace es multiplicar dos números: Particiones de equivalencia coger el números y dividir en partes: probar multiplicar varias parejas de números positivos, y varias parejas de números negativos, y varias de 1 número posi y otro neg. y valores límites: se emplea con números muy raros que están en los límites (cero, máx número positivo (en byte probar 126,127,128))_
 
 ### Estrategias de prueba de caja blanca
 
@@ -99,6 +106,7 @@ Se examina el código fuente y su ejecución. Son pruebas estructurales.
   - Cobertura lógica
   - Prueba de bucles
 
+_Técnicas: cobertura de código, comprueba que por ejemplo no se ha dejado ningún if sin pasar, que no deja ningún grupo sin probar. Prueba de bubles (bubles infinitos, que no se ejecutan...
 
 ### Tipos de pruebas
 
